# ComputerGraphics

./: CMakeLists.txt
.github/workflows/: codeql.yml
Textures/: Thumbs.db
src/: BasicMesh.cpp  BasicMesh.h  BmpDecoder.cpp  BmpDecoder.h  BmpHeader.h  Camera.cpp  Camera.h  Data.cpp  Data.h  DdsDecoder.cpp  DdsDecoder.h  FileSystem.cpp  FileSystem.h  Framebuffer.cpp  Framebuffer.h  Frustum.cpp  Frustum.h  GlutRotateWindow.h  GlutWindow.cpp  GlutWindow.h  JpegDecoder.h  Log.cpp  Log.h  Makefile  Makefile.nmake  Pipeline.cpp  Pipeline.h  PngDecoder.cpp  PngDecoder.h  Program.cpp  Program.h  Query.cpp  Query.h  README  Resources.cpp  Resources.h  Sampler.cpp  Sampler.h  ScreenQuad.cpp  ScreenQuad.h  (+148 more)
src-1/: BasicMesh.cpp  BmpHeader.h  Camera.cpp  Camera.h  Data.cpp  Data.h  DdsDecoder.cpp  DdsDecoder.h  DdsDefs.h  Framebuffer.h  Frustum.cpp  Frustum.h  GlutWindow.cpp  GlutWindow.h  JpegDecoder.cpp  Pipeline.cpp  Pipeline.h  PngDecoder.cpp  Query.cpp  Query.h  ScreenQuad.cpp  ScreenQuad.h  Sync.h  TexFormat.cpp  TexFormat.h  TexImage.cpp  TexImage.h  Texture.cpp  Texture.h  TgaEncoder.cpp  TgaEncoder.h  TgaHeader.h  UbAccessor.h  VertexArray.h  VertexBuffer.cpp  ZipFileSystem.h  bezier.cpp  bezier.glsl  blinn-phong-norm.cpp  cartoon-ext.cpp  (+76 more)
